# tp-highload-static_server

./: .gitignore  CMakeLists.txt  README.md  main.cpp  nginx.Dockerfile  nginx.conf  server.Dockerfile  server.conf
client/: Client.cpp  Client.h
handler/: Handler.cpp  Handler.h
request/: request.cpp  request.h
response/: response.cpp  response.h
server/: server.cpp  server.h
test/: httptest.py
utils/: config.h  mapping.h  mimeType.h  responseMethods.h
utils/parser/: Parser.cpp  Parser.h
